hook up s3 bucket to lambda for secrets changes

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -101,6 +101,20 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+  SecretsStore:
+    Type: "AWS::S3::Bucket"
+    DeletionPolicy: Retain
+    Properties:
+      BucketName: !Sub ${SecretsBase}-secrets
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+      VersioningConfiguration:
+        Status: Enabled
+      NotificationConfiguration:
+        LambdaConfigurations:
+          - Function: !Ref SecretsS3UpdateFunction
+            Event: "s3:ObjectCreated:*"
   # SNS Topics
   CodePipelineApprovalsSnsTopic:
     Type: "AWS::SNS::Topic"
