--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -14,6 +14,10 @@ Metadata:
         Parameters:
           - InfrastructureConfigStagingKey
           - InfrastructureConfigProductionKey
+      - Label:
+          default: Secrets Config
+        Parameters:
+          - SecretsBase
     ParameterLabels:
       InfrastructureStorageStackName:
         default: Storage stack name
@@ -23,6 +27,8 @@ Metadata:
         default: Staging S3 object key
       InfrastructureConfigProductionKey:
         default: Production S3 object key
+      SecretsBase:
+        default: Secrets base name, with -secrets suffix as the s3 bucket
 Parameters:
   InfrastructureStorageStackName:
     Default: infrastructure-storage
