Standardize some IAM permissions

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -164,19 +164,19 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                  - "s3:getObject"
+                  - "s3:GetObject"
                 Resource:
                   - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureConfigBucket", "/", !Ref InfrastructureConfigStagingKey]]
               - Effect: Allow
                 Action:
-                  - "s3:putObject"
+                  - "s3:PutObject"
                 Resource:
                   - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSnapshotsBucket", "/*"]]
                   - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/*"]]
               - Effect: Allow
                 Action:
-                  - "s3:putObject"
-                  - "s3:getObject"
+                  - "s3:PutObject"
+                  - "s3:GetObject"
                 Resource:
                   - !Sub arn:aws:s3:::${ArtifactStore}/*
                   - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureConfigBucket", "/", !Ref InfrastructureConfigProductionKey]]
