--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -187,13 +187,13 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                  - "s3:getObject"
-                  - "s3:putObject"
+                  - "s3:GetObject"
+                  - "s3:PutObject"
                 Resource:
                   - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureConfigBucket", "/", !Ref InfrastructureConfigStagingKey]]
               - Effect: Allow
                 Action:
-                  - "s3:putObject"
+                  - "s3:PutObject"
                 Resource:
                   - !Sub arn:aws:s3:::${CiCodeBuildSourceArchiveBucket}/*
         - PolicyName: CodeBuildPolicy
