--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -95,6 +95,8 @@ Resources:
   # SNS Topics
   CodePipelineApprovalsSnsTopic:
     Type: "AWS::SNS::Topic"
+  CodePipelineFailuresSnsTopic:
+    Type: "AWS::SNS::Topic"
   DeployNotificationsSnsTopic:
     Type: "AWS::SNS::Topic"
   # SNS Subscriptions
@@ -114,6 +116,14 @@ Resources:
           !Sub "${NotificationsStackName}-SnsOpsMessagesToSlackLambdaFunctionArn"
       Protocol: lambda
       TopicArn: !Ref DeployNotificationsSnsTopic
+  CodePipelineFailureTopicRelayFunctionSubscription:
+    Type: "AWS::SNS::Subscription"
+    Properties:
+      Endpoint:
+        Fn::ImportValue:
+          !Sub "${NotificationsStackName}-SnsOpsMessagesToSlackLambdaFunctionArn"
+      Protocol: lambda
+      TopicArn: !Ref CodePipelineFailuresSnsTopic
   # Lambda Permssions for SNS
   CodePipelineApprovalsTopicInvokeRelayFunctionPermission:
     Type: "AWS::Lambda::Permission"
@@ -124,6 +134,15 @@ Resources:
           !Sub "${NotificationsStackName}-SnsOpsMessagesToSlackLambdaFunctionName"
       Principal: sns.amazonaws.com
       SourceArn: !Ref CodePipelineApprovalsSnsTopic
+  CodePipelineFailureTopicInvokeRelayFunctionPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName:
+        Fn::ImportValue:
+          !Sub "${NotificationsStackName}-SnsOpsMessagesToSlackLambdaFunctionName"
+      Principal: sns.amazonaws.com
+      SourceArn: !Ref DeployNotificationsSnsTopic
   DeployNotificationsTopicInvokeRelayFunctionPermission:
     Type: "AWS::Lambda::Permission"
     Properties:
@@ -134,6 +153,29 @@ Resources:
       Principal: sns.amazonaws.com
       SourceArn: !Ref DeployNotificationsSnsTopic
   # IAM Roles
+  CloudWatchEventsIAMRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Allow"
+            Principal:
+              Service:
+                - "events.amazonaws.com"
+            Action:
+              - "sts:AssumeRole"
+      Path: "/"
+      Policies:
+        - PolicyName: LambdaPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "lambda:InvokeFunction"
+                Resource:
+                  - !GetAtt PipelineFailNotificationFunction.Arn
   LambdaExecutionIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -197,6 +239,7 @@ Resources:
                 Action:
                   - "codepipeline:PutJobSuccessResult"
                   - "codepipeline:PutJobFailureResult"
+                  - "codepipeline:GetPipelineState"
                 Resource: "*"
         - PolicyName: CloudWatchMetricsPolicy
           PolicyDocument:
@@ -569,6 +612,28 @@ Resources:
         - Key: Project
           Value: Infrastructure
       Timeout: 3
+  PipelineFailNotificationFunction:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      Code:
+        S3Bucket:
+          Fn::ImportValue:
+            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
+        S3Key: cd/pipeline-fail-notification.zip
+      Description: >
+        Sends a message when pipeline run fails
+      Environment:
+        Variables:
+          CODEPIPELINE_FAILURES_TOPIC_ARN: !Ref CodePipelineFailuresSnsTopic
+          PIPELINE_NAME: !Ref Pipeline
+      Handler: lambda_function.lambda_handler
+      MemorySize: 128
+      Role: !GetAtt LambdaExecutionIAMRole.Arn
+      Runtime: python3.6
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+      Timeout: 3
   # Lambda Alarms
   SourceSyncErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
@@ -705,6 +770,45 @@ Resources:
       Dimensions:
         - Name: FunctionName
           Value: !Ref DeploymentNotificationFunction
+  FailureNotificationErrorAlarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Properties:
+      ActionsEnabled: true
+      AlarmName: CD Failure Notification Lambda Errors
+      AlarmActions:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+      InsufficientDataActions:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+      OKActions:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+      AlarmDescription: >
+        The error rate on the failure notification lambda has exceeded 0 in
+        the last minute.
+      ComparisonOperator: GreaterThanThreshold
+      EvaluationPeriods: "1"
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Period: "60"
+      Statistic: Sum
+      Threshold: "0"
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref PipelineFailNotificationFunction
+  # CloudWatch Events Schedulers
+  FailureNotificationEventTrigger:
+    Type: "AWS::Events::Rule"
+    Properties:
+      Description: >
+        Runs the failure notification poller Lambda function periodically
+      RoleArn: !GetAtt CloudWatchEventsIAMRole.Arn
+      ScheduleExpression: "rate(1 minute)"
+      State: ENABLED
+      Targets:
+        - Arn: !GetAtt PipelineFailNotificationFunction.Arn
+          Id: !Sub "${AWS::StackName}.FailureNotification-Poller"
   # Pipelines
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
