use the infrastructure stack name as the secrets base, and get exported key from the secrets stack

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -1,3 +1,6 @@
+# create the user group and policies
+# output the secret key for use by rest of stacks
+
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates the bucket and lambda needed to support application secrets
@@ -14,10 +17,6 @@ Metadata:
         Parameters:
           - InfrastructureConfigStagingKey
           - InfrastructureConfigProductionKey
-      - Label:
-          default: Secrets Config
-        Parameters:
-          - SecretsBase
     ParameterLabels:
       InfrastructureStorageStackName:
         default: Storage stack name
@@ -27,8 +26,6 @@ Metadata:
         default: Staging S3 object key
       InfrastructureConfigProductionKey:
         default: Production S3 object key
-      SecretsBase:
-        default: Secrets base name, with -secrets suffix as the s3 bucket
 Parameters:
   InfrastructureStorageStackName:
     Default: infrastructure-storage
@@ -50,12 +47,28 @@ Parameters:
       The S3 object key for the production template configuration file archive
       (.zip), inside the InfrastructureConfigBucket
     Type: String
-  SecretsBase:
-    Default: prx_apps
-    Description: >
-      Base name for aws-secrets, add "-secrets" suffix for secrets bucket name.
-    Type: String
 Resources:
+  SecretsKey:
+    Type: "AWS::KMS::Key"
+    Properties:
+      Description: "Secrets Key"
+      KeyPolicy:
+        Version: "2012-10-17"
+        Statement:
+          -
+            Sid: "Enable IAM User Permissions"
+            Effect: "Allow"
+            Principal:
+              AWS: !Sub arn:aws:iam::${AWS::AccountId}:root
+            Action:
+              - "kms:*"
+            Resource: "*"
+  SecretsKeyAlias:
+    Type: AWS::KMS::Alias
+    Properties:
+      AliasName: !Sub alias/${InfrastructureStorageStackName}-secrets
+      TargetKeyId:
+        Ref: SecretsKey
   SecretsLambdaExecutionIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -96,7 +109,7 @@ Resources:
                   - "s3:getObject"
                   - "s3:getObjectVersion"
                 Resource:
-                  - !Sub arn:aws:s3:::${SecretsBase}-secrets/*
+                  - !Sub arn:aws:s3:::${InfrastructureStorageStackName}-secrets/*
         - PolicyName: CloudWatchMetricsPolicy
           PolicyDocument:
             Version: "2012-10-17"
@@ -114,7 +127,7 @@ Resources:
         S3Bucket:
           Fn::ImportValue:
             !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
-        S3Key: secrets/secrets-s3-update-source.zip
+        S3Key: secrets/secrets-s3-update.zip
       Description: >
         Updates template config when secrets change
       Environment:
@@ -136,7 +149,7 @@ Resources:
     Type: "AWS::S3::Bucket"
     DeletionPolicy: Retain
     Properties:
-      BucketName: !Sub ${SecretsBase}-secrets
+      BucketName: !Sub ${InfrastructureStorageStackName}-secrets
       Tags:
         - Key: Project
           Value: Infrastructure
@@ -146,3 +159,8 @@ Resources:
         LambdaConfigurations:
           - Function: !Ref SecretsS3UpdateFunction
             Event: "s3:ObjectCreated:*"
+Outputs:
+  SecretsKey:
+    Value: !Ref SecretsKey
+    Export:
+      Name: !Sub ${InfrastructureStorageStackName}-SecretsKey
