--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -25,10 +25,6 @@ Parameters:
     AllowedValues:
       - Staging
       - Production
-  SecretsBase:
-    Type: String
-  SecretsKey:
-    Type: String
   # Application Specific
   AudiogramEcrImageTag:
     Type: String
@@ -120,8 +116,10 @@ Resources:
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-        SecretsBase: !Ref SecretsBase
-        SecretsKey: !Ref SecretsKey
+        SecretsBase: !Ref InfrastructureStorageStackName
+        SecretsKey:
+          Fn::ImportValue:
+            !Sub "${InfrastructureStorageStackName}-SecretsKey"
         SecretsRegion: !Ref EcrRegion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/ecs.yml"]]
       TimeoutInMinutes: "5"
@@ -166,7 +164,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         EcrRegion: !Ref EcrRegion
-        SecretsBase: !Ref SecretsBase
+        SecretsBase: !Ref InfrastructureStorageStackName
         SecretsRegion: !Ref EcrRegion
         PublishEcrImageTag: !Ref PublishEcrImageTag
         PublishSecretsVersion: !Ref PublishSecretsVersion
@@ -198,7 +196,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         EcrRegion: !Ref EcrRegion
-        SecretsBase: !Ref SecretsBase
+        SecretsBase: !Ref InfrastructureStorageStackName
         SecretsRegion: !Ref EcrRegion
         CastleEcrImageTag: !Ref CastleEcrImageTag
         CastleSecretsVersion: !Ref CastleSecretsVersion
@@ -231,7 +229,7 @@ Resources:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         EcrRegion: !Ref EcrRegion
-        SecretsBase: !Ref SecretsBase
+        SecretsBase: !Ref InfrastructureStorageStackName
         SecretsRegion: !Ref EcrRegion
         AudiogramEcrImageTag: !Ref AudiogramEcrImageTag
         AudiogramSecretsVersion: !Ref AudiogramSecretsVersion
@@ -285,7 +283,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         EcrRegion: !Ref EcrRegion
-        SecretsBase: !Ref SecretsBase
+        SecretsBase: !Ref InfrastructureStorageStackName
         SecretsRegion: !Ref EcrRegion
         PlayEcrImageTag: !Ref PlayEcrImageTag
         PlaySecretsVersion: !Ref PlaySecretsVersion
