bit of cleanup, fix ref, add arn export

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -51,13 +51,10 @@ Resources:
   SecretsKey:
     Type: "AWS::KMS::Key"
     Properties:
-      Description: "Secrets Key"
       KeyPolicy:
         Version: "2012-10-17"
         Statement:
-          -
-            Sid: "Enable IAM User Permissions"
-            Effect: "Allow"
+          - Effect: "Allow"
             Principal:
               AWS: !Sub arn:aws:iam::${AWS::AccountId}:root
             Action:
@@ -67,8 +64,7 @@ Resources:
     Type: AWS::KMS::Alias
     Properties:
       AliasName: !Sub alias/${InfrastructureStorageStackName}-secrets
-      TargetKeyId:
-        Ref: SecretsKey
+      TargetKeyId: !Ref SecretsKey
   SecretsLambdaExecutionIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -164,3 +160,7 @@ Outputs:
     Value: !Ref SecretsKey
     Export:
       Name: !Sub ${InfrastructureStorageStackName}-SecretsKey
+  SecretsKeyArn:
+    Value: !GetAtt SecretsKey.Arn
+    Export:
+      Name: !Sub ${InfrastructureStorageStackName}-SecretsKeyArn
