add in group and instance policies

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -1,6 +1,3 @@
-# create the user group and policies
-# output the secret key for use by rest of stacks
-
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates the bucket and lambda needed to support application secrets
@@ -48,6 +45,60 @@ Parameters:
       (.zip), inside the InfrastructureConfigBucket
     Type: String
 Resources:
+  SecretsIAMGroup:
+    Type: "AWS::IAM::Group"
+    Properties:
+      GroupName: !Sub ${InfrastructureStorageStackName}-manage-secrets
+      Path: "/"
+      Policies:
+        - PolicyName: !Sub ${InfrastructureStorageStackName}-encrypt-secrets
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Id: !Sub key-${InfrastructureStorageStackName}-secrets-encrypt-policy
+                Effect: Allow
+                Action:
+                  - kms:Encrypt
+                  - kms:Decrypt
+                Resource:
+                  - !GetAtt SecretsKey.Arn
+        - PolicyName: !Sub ${InfrastructureStorageStackName}-secrets-s3-read-write
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Id: !Sub key-${InfrastructureStorageStackName}-secrets-group-access-policy
+                Effect: Allow
+                Action:
+                  - s3:GetObject
+                  - s3:GetObjectVersion
+                  - s3:PutObject
+                Resource:
+                  - !Sub arn:aws:s3:::${InfrastructureStorageStackName}-secrets/*
+  SecretsInstanceDecryptPolicy:
+    Type: "AWS::IAM::Policy"
+    Properties:
+      PolicyName: !Sub key-${InfrastructureStorageStackName}-secrets-instance-decrypt-policy
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - kms:Decrypt
+            Resource:
+              - !GetAtt SecretsKey.Arn
+  SecretsInstanceAccessPolicy:
+    Type: "AWS::IAM::Policy"
+    Properties:
+      PolicyName: !Sub key-${InfrastructureStorageStackName}-secrets-instance-access-policy
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - s3:GetObject
+              - s3:GetObjectVersion
+            Resource:
+              - !Sub arn:aws:s3:::${InfrastructureStorageStackName}-secrets/*
   SecretsKey:
     Type: "AWS::KMS::Key"
     Properties:
@@ -160,7 +211,11 @@ Outputs:
     Value: !Ref SecretsKey
     Export:
       Name: !Sub ${InfrastructureStorageStackName}-SecretsKey
-  SecretsKeyArn:
-    Value: !GetAtt SecretsKey.Arn
+  SecretsInstanceDecryptPolicy:
+    Value: !Ref SecretsInstanceDecryptPolicy
     Export:
-      Name: !Sub ${InfrastructureStorageStackName}-SecretsKeyArn
+      Name: !Sub ${InfrastructureStorageStackName}-SecretsInstanceDecryptPolicy
+  SecretsInstanceAccessPolicy:
+    Value: !Ref SecretsInstanceAccessPolicy
+    Export:
+      Name: !Sub ${InfrastructureStorageStackName}-SecretsInstanceAccessPolicy
