--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -116,11 +116,7 @@ Resources:
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-        SecretsBase: !Ref InfrastructureStorageStackName
-        SecretsKey:
-          Fn::ImportValue:
-            !Sub "${InfrastructureStorageStackName}-SecretsKey"
-        SecretsRegion: !Ref EcrRegion
+        InfrastructureStorageStackName: !Ref InfrastructureStorageStackName
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/ecs.yml"]]
       TimeoutInMinutes: "5"
   LoadBalancersStack:
