Host listeners for prod publish

--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -114,7 +114,7 @@ Resources:
           Values:
             - publish.prx.tech
       ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 02]]
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 03]]
   PublishALBHTTPHostStagingGenericAltListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Condition: CreateStagingResources
@@ -127,7 +127,20 @@ Resources:
           Values:
             - publish-staging.prx.tech
       ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 03]]
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 04]]
+  PublishALBHTTPHostProductionGenericAltListenerRule:
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Condition: CreateProductionResources
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref PublishALBTargetGroup
+          Type: forward
+      Conditions:
+        - Field: host-header
+          Values:
+            - publish.prx.org
+      ListenerArn: !Ref PlatformALBHTTPListenerArn
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 05]]
   PublishALBHTTPSHostVPCListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Properties:
@@ -165,7 +178,7 @@ Resources:
           Values:
             - publish.prx.tech
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 12]]
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 13]]
   PublishALBHTTPSHostStagingGenericAltListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Condition: CreateStagingResources
@@ -178,7 +191,20 @@ Resources:
           Values:
             - publish-staging.prx.tech
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 13]]
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 14]]
+  PublishALBHTTPSHostProductionGenericAltListenerRule:
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Condition: CreateProductionResources
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref PublishALBTargetGroup
+          Type: forward
+      Conditions:
+        - Field: host-header
+          Values:
+            - publish.prx.org
+      ListenerArn: !Ref PlatformALBHTTPSListenerArn
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 15]]
   # ECS Service
   PublishTaskDefinition:
     Type: "AWS::ECS::TaskDefinition"
