--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -65,6 +65,9 @@ Resources:
       Name: !Sub castle-${EnvironmentTypeAbbreviation}-${VPC}
       Port: 80
       Protocol: HTTP
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+          Value: 30
       Tags:
         - Key: Project
           Value: !FindInMap [Shared, Project, name]
