Upgrade prod cluster and run more tasks

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -50,15 +50,15 @@ Mappings:
     Staging:
       InstanceType: t2.small
       MinSize: "2"
-      DefaultDesiredCapacity: "2"
-      WarningThreshold: "2"
-      MaxSize: "2"
+      DefaultDesiredCapacity: "4"
+      WarningThreshold: "9"
+      MaxSize: "10"
     Production:
-      InstanceType: t2.small
+      InstanceType: t2.medium
       MinSize: "4"
-      DefaultDesiredCapacity: "8"
-      WarningThreshold: "100"
-      MaxSize: "128"
+      DefaultDesiredCapacity: "4"
+      WarningThreshold: "35"
+      MaxSize: "40"
   RegionMap:
     # AMI's as of 2017-05-05
     # https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-optimized_AMI_launch_latest.html
