put back in secrets base and region, but only in stack, not in json

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -54,6 +54,16 @@ Parameters:
     Type: String
   InfrastructureGitCommit:
     Type: String
+  SecretsBase:
+    Default: prx-infrastructure
+    Description: >
+      Base string value for secrets resource names
+    Type: String
+  SecretsRegion:
+    Default: us-east-1
+    Description: >
+      Region where secrets related resources exist
+    Type: String
 Mappings:
   EnvironmentTypeMap:
     Testing:
@@ -116,7 +126,8 @@ Resources:
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-        InfrastructureStorageStackName: !Ref InfrastructureStorageStackName
+        SecretsBase: !Ref SecretsBase
+        SecretsRegion: !Ref SecretsRegion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/ecs.yml"]]
       TimeoutInMinutes: "5"
   LoadBalancersStack:
@@ -160,8 +171,8 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         EcrRegion: !Ref EcrRegion
-        SecretsBase: !Ref InfrastructureStorageStackName
-        SecretsRegion: !Ref EcrRegion
+        SecretsBase: !Ref SecretsBase
+        SecretsRegion: !Ref SecretsRegion
         PublishEcrImageTag: !Ref PublishEcrImageTag
         PublishSecretsVersion: !Ref PublishSecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/publish.prx.org.yml"]]
@@ -192,8 +203,8 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         EcrRegion: !Ref EcrRegion
-        SecretsBase: !Ref InfrastructureStorageStackName
-        SecretsRegion: !Ref EcrRegion
+        SecretsBase: !Ref SecretsBase
+        SecretsRegion: !Ref SecretsRegion
         CastleEcrImageTag: !Ref CastleEcrImageTag
         CastleSecretsVersion: !Ref CastleSecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/castle.prx.org.yml"]]
@@ -225,8 +236,8 @@ Resources:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         EcrRegion: !Ref EcrRegion
-        SecretsBase: !Ref InfrastructureStorageStackName
-        SecretsRegion: !Ref EcrRegion
+        SecretsBase: !Ref SecretsBase
+        SecretsRegion: !Ref SecretsRegion
         AudiogramEcrImageTag: !Ref AudiogramEcrImageTag
         AudiogramSecretsVersion: !Ref AudiogramSecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/audiogram.yml"]]
@@ -279,8 +290,8 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         EcrRegion: !Ref EcrRegion
-        SecretsBase: !Ref InfrastructureStorageStackName
-        SecretsRegion: !Ref EcrRegion
+        SecretsBase: !Ref SecretsBase
+        SecretsRegion: !Ref SecretsRegion
         PlayEcrImageTag: !Ref PlayEcrImageTag
         PlaySecretsVersion: !Ref PlaySecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/play.prx.org.yml"]]
