fix action name strings

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -126,21 +126,21 @@ Resources:
   GitHubEventTopicInvokeFunctionPermission:
     Type: "AWS::Lambda::Permission"
     Properties:
-      Action: lambda:InvokeFunction
+      Action: "lambda:InvokeFunction"
       FunctionName: !Ref GitHubEventHandlerLambdaFunction
       Principal: sns.amazonaws.com
       SourceArn: !Ref GitHubEventSnsTopic
   CodeBuildCallbackTopicInvokeFunctionPermission:
     Type: "AWS::Lambda::Permission"
     Properties:
-      Action: lambda:InvokeFunction
+      Action: "lambda:InvokeFunction"
       FunctionName: !Ref CodeBuildCallbackHanlderLambdaFunction
       Principal: sns.amazonaws.com
       SourceArn: !Ref CodeBuildCallbackSnsTopic
   CiStatusTopicInvokeRelayFunctionPermission:
     Type: "AWS::Lambda::Permission"
     Properties:
-      Action: lambda:InvokeFunction
+      Action: "lambda:InvokeFunction"
       FunctionName:
         Fn::ImportValue:
           !Sub ${NotificationsStackName}-SnsOpsMessagesToSlackLambdaFunctionName
@@ -187,13 +187,13 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                  - "s3:getObject"
-                  - "s3:putObject"
+                  - "s3:GetObject"
+                  - "s3:PutObject"
                 Resource:
                   - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureConfigBucket", "/", !Ref InfrastructureConfigStagingKey]]
               - Effect: Allow
                 Action:
-                  - "s3:putObject"
+                  - "s3:PutObject"
                 Resource:
                   - !Sub arn:aws:s3:::${CiCodeBuildSourceArchiveBucket}/*
         - PolicyName: CodeBuildPolicy
@@ -491,7 +491,7 @@ Resources:
   GitHubWebhookRequestPostMethodInvokeFunctionPermission:
     Type: "AWS::Lambda::Permission"
     Properties:
-      Action: lambda:InvokeFunction
+      Action: "lambda:InvokeFunction"
       FunctionName: !Ref GitHubWebhookEndpointLambdaFunction
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RestApi}/${RestApiProdStage}/*"  # TOD This isn't quite right. Reference one made by the console to correct
