--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -130,7 +130,7 @@ Resources:
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 04]]
   PlayALBHTTPHostProductionGenericAltListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: CreateStagingResources
+    Condition: CreateProductionResources
     Properties:
       Actions:
         - TargetGroupArn: !Ref PlayALBTargetGroup
@@ -194,7 +194,7 @@ Resources:
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 14]]
   PlayALBHTTPSHostProductionGenericAltListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
-    Condition: CreateStagingResources
+    Condition: CreateProductionResources
     Properties:
       Actions:
         - TargetGroupArn: !Ref PlayALBTargetGroup
