more action string fixes

--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -99,7 +99,7 @@ Resources:
   UploadRestApiLambdaPermission:
     Type: "AWS::Lambda::Permission"
     Properties:
-      Action: lambda:InvokeFunction
+      Action: "lambda:InvokeFunction"
       FunctionName: !Ref UploadLambdaFunction
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${UploadRestApi}/${UploadRestApiStage}/*"
