add alarm, use secrets base, remove lambda role policies, fix action names

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -14,6 +14,7 @@ Metadata:
         Parameters:
           - InfrastructureConfigStagingKey
           - InfrastructureConfigProductionKey
+          - SecretsBase
     ParameterLabels:
       InfrastructureStorageStackName:
         default: Storage stack name
@@ -23,6 +24,8 @@ Metadata:
         default: Staging S3 object key
       InfrastructureConfigProductionKey:
         default: Production S3 object key
+      SecretsBase:
+        default: Secrets base name
 Parameters:
   InfrastructureStorageStackName:
     Default: infrastructure-storage
@@ -44,68 +47,73 @@ Parameters:
       The S3 object key for the production template configuration file archive
       (.zip), inside the InfrastructureConfigBucket
     Type: String
+  SecretsBase:
+    Default: prx-infrastructure
+    Description: >
+      Base string value for secrets resource names.
+    Type: String
 Resources:
   SecretsIAMGroup:
     Type: "AWS::IAM::Group"
     Properties:
-      GroupName: !Sub ${InfrastructureStorageStackName}-manage-secrets
+      GroupName: !Sub ${SecretsBase}-${AWS::Region}-manage-secrets
       Path: "/"
       Policies:
-        - PolicyName: !Sub ${InfrastructureStorageStackName}-encrypt-secrets
+        - PolicyName: !Sub ${SecretsBase}-${AWS::Region}-encrypt-secrets
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
-              - Id: !Sub key-${InfrastructureStorageStackName}-secrets-encrypt-policy
+              - Id: !Sub key-${SecretsBase}-${AWS::Region}-secrets-encrypt-policy
                 Effect: Allow
                 Action:
-                  - kms:Encrypt
-                  - kms:Decrypt
+                  - "kms:Encrypt"
+                  - "kms:Decrypt"
                 Resource:
                   - !GetAtt SecretsKey.Arn
-        - PolicyName: !Sub ${InfrastructureStorageStackName}-secrets-s3-read-write
+        - PolicyName: !Sub ${SecretsBase}-${AWS::Region}-secrets-s3-read-write
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
-              - Id: !Sub key-${InfrastructureStorageStackName}-secrets-group-access-policy
+              - Id: !Sub key-${SecretsBase}-${AWS::Region}-secrets-group-access-policy
                 Effect: Allow
                 Action:
-                  - s3:GetObject
-                  - s3:GetObjectVersion
-                  - s3:PutObject
+                  - "s3:GetObject"
+                  - "s3:GetObjectVersion"
+                  - "s3:PutObject"
                 Resource:
-                  - !Sub arn:aws:s3:::${InfrastructureStorageStackName}-secrets/*
+                  - !Sub arn:aws:s3:::${SecretsBase}-${AWS::Region}-secrets/*
   SecretsInstanceDecryptPolicy:
     Type: "AWS::IAM::Policy"
     Properties:
-      PolicyName: !Sub key-${InfrastructureStorageStackName}-secrets-instance-decrypt-policy
+      PolicyName: !Sub key-${SecretsBase}-${AWS::Region}-secrets-instance-decrypt-policy
       PolicyDocument:
         Version: "2012-10-17"
         Statement:
           - Effect: Allow
             Action:
-              - kms:Decrypt
+              - "kms:Decrypt"
             Resource:
               - !GetAtt SecretsKey.Arn
   SecretsInstanceAccessPolicy:
     Type: "AWS::IAM::Policy"
     Properties:
-      PolicyName: !Sub key-${InfrastructureStorageStackName}-secrets-instance-access-policy
+      PolicyName: !Sub key-${SecretsBase}-${AWS::Region}-secrets-instance-access-policy
       PolicyDocument:
         Version: "2012-10-17"
         Statement:
           - Effect: Allow
             Action:
-              - s3:GetObject
-              - s3:GetObjectVersion
+              - "s3:GetObject"
+              - "s3:GetObjectVersion"
             Resource:
-              - !Sub arn:aws:s3:::${InfrastructureStorageStackName}-secrets/*
+              - !Sub arn:aws:s3:::${SecretsBase}-${AWS::Region}-secrets/*
   SecretsKey:
     Type: "AWS::KMS::Key"
     Properties:
       KeyPolicy:
         Version: "2012-10-17"
         Statement:
-          - Effect: "Allow"
+          - Effect: Allow
             Principal:
               AWS: !Sub arn:aws:iam::${AWS::AccountId}:root
             Action:
@@ -114,7 +122,7 @@ Resources:
   SecretsKeyAlias:
     Type: AWS::KMS::Alias
     Properties:
-      AliasName: !Sub alias/${InfrastructureStorageStackName}-secrets
+      AliasName: !Sub alias/${SecretsBase}-${AWS::Region}-secrets
       TargetKeyId: !Ref SecretsKey
   SecretsLambdaExecutionIAMRole:
     Type: "AWS::IAM::Role"
@@ -122,7 +130,7 @@ Resources:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
-          - Effect: "Allow"
+          - Effect: Allow
             Principal:
               Service:
                 - "lambda.amazonaws.com"
@@ -130,41 +138,23 @@ Resources:
               - "sts:AssumeRole"
       Path: "/"
       Policies:
-        - PolicyName: XrayTracePolicy
+        - PolicyName: SecretsS3Policy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
               - Effect: Allow
                 Action:
-                  - "xray:PutTraceSegments"
-                  - "xray:PutTelemetryRecords"
-                Resource:
-                  - "*"
-        - PolicyName: S3Policy
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: Allow
-                Action:
-                  - "s3:getObject"
-                  - "s3:putObject"
+                  - "s3:GetObject"
+                  - "s3:PutObject"
                 Resource:
                   - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureConfigBucket", "/", !Ref InfrastructureConfigStagingKey]]
                   - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureConfigBucket", "/", !Ref InfrastructureConfigProductionKey]]
               - Effect: Allow
                 Action:
-                  - "s3:getObject"
-                  - "s3:getObjectVersion"
+                  - "s3:GetObject"
+                  - "s3:GetObjectVersion"
                 Resource:
-                  - !Sub arn:aws:s3:::${InfrastructureStorageStackName}-secrets/*
-        - PolicyName: CloudWatchMetricsPolicy
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: Allow
-                Action:
-                  - "cloudwatch:PutMetricData"
-                Resource: "*"
+                  - !Sub arn:aws:s3:::${SecretsBase}-${AWS::Region}-secrets/*
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
   SecretsS3UpdateFunction:
@@ -192,11 +182,38 @@ Resources:
         - Key: Project
           Value: Infrastructure
       Timeout: 8
+  SecretsS3UpdateErrorAlarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Properties:
+      ActionsEnabled: true
+      AlarmName: Secrets S3 Update Lambda Errors
+      AlarmActions:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+      InsufficientDataActions:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+      OKActions:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+      AlarmDescription: >
+        The error rate on the secrets S3 update lambda has exceeded 0 in
+        the last minute.
+      ComparisonOperator: GreaterThanThreshold
+      EvaluationPeriods: "1"
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Period: "60"
+      Statistic: Sum
+      Threshold: "0"
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref SecretsS3UpdateFunction
   SecretsBucket:
     Type: "AWS::S3::Bucket"
     DeletionPolicy: Retain
     Properties:
-      BucketName: !Sub ${InfrastructureStorageStackName}-secrets
+      BucketName: !Sub ${SecretsBase}-${AWS::Region}-secrets
       Tags:
         - Key: Project
           Value: Infrastructure
@@ -210,12 +227,12 @@ Outputs:
   SecretsKey:
     Value: !Ref SecretsKey
     Export:
-      Name: !Sub ${InfrastructureStorageStackName}-SecretsKey
+      Name: !Sub ${SecretsBase}-${AWS::Region}-SecretsKey
   SecretsInstanceDecryptPolicy:
     Value: !Ref SecretsInstanceDecryptPolicy
     Export:
-      Name: !Sub ${InfrastructureStorageStackName}-SecretsInstanceDecryptPolicy
+      Name: !Sub ${SecretsBase}-${AWS::Region}-SecretsInstanceDecryptPolicy
   SecretsInstanceAccessPolicy:
     Value: !Ref SecretsInstanceAccessPolicy
     Export:
-      Name: !Sub ${InfrastructureStorageStackName}-SecretsInstanceAccessPolicy
+      Name: !Sub ${SecretsBase}-${AWS::Region}-SecretsInstanceAccessPolicy
