Clean up default parameter values

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -32,7 +32,7 @@ Parameters:
     Description: The name of a previously launched infrastructure storage stack
     Type: String
   NotificationsStackName:
-    Default: notifications
+    Default: infrastructure-notifications
     Description: The name of a previously launched notifications stack
     Type: String
   InfrastructureConfigStagingKey:
