--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -47,7 +47,7 @@ Parameters:
     Description: The name of a previously launched infrastructure storage stack
     Type: String
   NotificationsStackName:
-    Default: notifications
+    Default: infrastructure-notifications
     Description: The name of a previously launched notifications stack
     Type: String
   InfrastructureConfigStagingKey:
