make policies managed

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -83,9 +83,9 @@ Resources:
                 Resource:
                   - !Sub arn:aws:s3:::${SecretsBase}-${AWS::Region}-secrets/*
   SecretsInstanceDecryptPolicy:
-    Type: "AWS::IAM::Policy"
+    Type: "AWS::IAM::ManagedPolicy"
     Properties:
-      PolicyName: !Sub key-${SecretsBase}-${AWS::Region}-secrets-instance-decrypt-policy
+      ManagedPolicyName: !Sub key-${SecretsBase}-${AWS::Region}-secrets-instance-decrypt-policy
       PolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -95,9 +95,9 @@ Resources:
             Resource:
               - !GetAtt SecretsKey.Arn
   SecretsInstanceAccessPolicy:
-    Type: "AWS::IAM::Policy"
+    Type: "AWS::IAM::ManagedPolicy"
     Properties:
-      PolicyName: !Sub key-${SecretsBase}-${AWS::Region}-secrets-instance-access-policy
+      ManagedPolicyName: !Sub key-${SecretsBase}-${AWS::Region}-secrets-instance-access-policy
       PolicyDocument:
         Version: "2012-10-17"
         Statement:
