Relocate policy document ID's

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -62,9 +62,9 @@ Resources:
         - PolicyName: !Sub ${SecretsBase}-${AWS::Region}-encrypt-secrets
           PolicyDocument:
             Version: "2012-10-17"
+            Id: !Sub key-${SecretsBase}-${AWS::Region}-secrets-encrypt-policy
             Statement:
-              - Id: !Sub key-${SecretsBase}-${AWS::Region}-secrets-encrypt-policy
-                Effect: Allow
+              - Effect: Allow
                 Action:
                   - "kms:Encrypt"
                   - "kms:Decrypt"
@@ -73,9 +73,9 @@ Resources:
         - PolicyName: !Sub ${SecretsBase}-${AWS::Region}-secrets-s3-read-write
           PolicyDocument:
             Version: "2012-10-17"
+            Id: !Sub key-${SecretsBase}-${AWS::Region}-secrets-group-access-policy
             Statement:
-              - Id: !Sub key-${SecretsBase}-${AWS::Region}-secrets-group-access-policy
-                Effect: Allow
+              - Effect: Allow
                 Action:
                   - "s3:GetObject"
                   - "s3:GetObjectVersion"
