Use function ARN for S3 notification config

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -221,7 +221,7 @@ Resources:
         Status: Enabled
       NotificationConfiguration:
         LambdaConfigurations:
-          - Function: !Ref SecretsS3UpdateFunction
+          - Function: !GetAtt SecretsS3UpdateFunction.Arn
             Event: "s3:ObjectCreated:*"
 Outputs:
   SecretsKey:
