export secrets managed policy arns, use in ecs instance profile managed policy arns list

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -229,10 +229,10 @@ Outputs:
     Export:
       Name: !Sub ${SecretsBase}-${AWS::Region}-SecretsKey
   SecretsInstanceDecryptPolicy:
-    Value: !Ref SecretsInstanceDecryptPolicy
+    Value: !GetAtt SecretsInstanceDecryptPolicy.Arn
     Export:
-      Name: !Sub ${SecretsBase}-${AWS::Region}-SecretsInstanceDecryptPolicy
+      Name: !Sub ${SecretsBase}-${AWS::Region}-SecretsInstanceDecryptPolicyArn
   SecretsInstanceAccessPolicy:
-    Value: !Ref SecretsInstanceAccessPolicy
+    Value: !GetAtt SecretsInstanceAccessPolicy.Arn
     Export:
-      Name: !Sub ${SecretsBase}-${AWS::Region}-SecretsInstanceAccessPolicy
+      Name: !Sub ${SecretsBase}-${AWS::Region}-SecretsInstanceAccessPolicyArn
