add in lambda permission for the s3 bucket

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -212,6 +212,7 @@ Resources:
   SecretsBucket:
     Type: "AWS::S3::Bucket"
     DeletionPolicy: Retain
+    DependsOn: SecretsBucketPermission
     Properties:
       BucketName: !Sub ${SecretsBase}-${AWS::Region}-secrets
       Tags:
@@ -223,6 +224,14 @@ Resources:
         LambdaConfigurations:
           - Function: !GetAtt SecretsS3UpdateFunction.Arn
             Event: "s3:ObjectCreated:*"
+  SecretsBucketPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: "lambda:InvokeFunction"
+      FunctionName: !Ref SecretsS3UpdateFunction
+      Principal: s3.amazonaws.com
+      SourceAccount: !Ref "AWS::AccountId"
+      SourceArn: !Sub "arn:aws:s3:::${SecretsBase}-${AWS::Region}-secrets"
 Outputs:
   SecretsKey:
     Value: !Ref SecretsKey
